tests/purs/failing/UnsupportedFFICommonJSImports2.js
import { yes } from "some ES module";
var cjsImports = require("some CJS module");

exports.yes = yes;
exports.no = cjsImports.no;
